--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -491,6 +491,19 @@ th {
   padding-top: 10px;
 }
 
+.index-project-black {
+  border-left: 1px solid #b7b7b7;
+  /* max-height: 200px; */
+  /* max-width: 500px; */
+  /* transform: translate(0, 30vh); */
+  font-size: 14px;
+  color: #000;
+  line-height: 22px;
+  margin: auto 0;
+  padding-left: 20px;
+  padding-top: 10px;
+}
+
 .content-black {
   border-left: 1px solid #000;
   color: #000;
@@ -775,6 +788,10 @@ footer {
     flex-direction: column-reverse;
   }
 
+  .index-project-black {
+    border-left: hidden;
+  }
+
   #about .container {
     padding: 0 0;
   }
@@ -793,6 +810,12 @@ footer {
 
   .custom-navbar {
     /* width: 90px; */
+  }
+
+  .about-content {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 10px;
   }
 }
 
@@ -852,6 +875,11 @@ footer {
     justify-content: center;
     padding-top: 50px;
   }
+  .about-content {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 10px;
+  }
 
   .background-image {
     position: relative;
@@ -877,6 +905,11 @@ footer {
   #about .project-black {
     margin-top: 40px;
     margin-left: 0;
+  }
+  .about-content {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 10px;
   }
 
   footer {
