--- a/css/index.css
+++ b/css/index.css
@@ -216,6 +216,10 @@ footer {
          right: 20vw;
          z-index: 1000;
      } */
+  .flip-card {
+    width: 80vw;
+    height: 80vw;
+  }
 }
 
 @media only screen and (max-width: 767px) {
