--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -443,6 +443,15 @@ th {
   margin-left: auto;
   margin-right: auto;
 }
+/* 
+#portfolio {
+  width: 80vw;
+  display: flex;
+}
+#feature-project {
+  width: 80%;
+  justify-content: center;
+} */
 
 /*---------------------------------------
    Project section              
@@ -476,6 +485,8 @@ th {
 
 .project {
   margin-bottom: 40px;
+  width: 80vw;
+  margin-inline: auto;
 }
 
 .project-black {
@@ -830,7 +841,8 @@ footer {
   }
 
   .project {
-    margin: auto 20px;
+    /* margin: auto 20px; */
+    margin-inline: auto;
   }
 
   #heading-section {
